copied prefix [ into prefix ] to prevent fatfingers

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,6 +7,10 @@ set-option -g prefix C-a
 unbind C-b
 bind C-a send-prefix
 
+unbind ]
+bind ] copy-mode
+bind p paste-buffer -p
+
 unbind z
 
 bind c new-window -c "#{pane_current_path}"
