--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,6 +2,7 @@
 # git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
 
 setw -g mode-keys vi
+set-option -g default-shell /usr/bin/zsh
 
 set-option -g prefix C-a
 unbind C-b
